<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/create_hunt_container_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/create_hunt_container_initial_clues"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/divider_background">

            <TextView
                android:id="@+id/create_hunt_container_add_clue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_clue"
                android:textColor="@color/colorAccent"/>
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/create_hunt_container_chest_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_normal"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_hunt_container_add_chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email"/>
</FrameLayout>