...
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider_background">

        <EditText
            android:id="@+id/create_chest_container_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:hint="Title"/>

...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/divider_background">

        <TextView
            android:id="@+id/create_chest_container_add_clue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_clue"
            android:textColor="@color/colorAccent"/>
    </FrameLayout>
...
